--- a/index.html
+++ b/index.html
@@ -299,7 +299,8 @@
         const validUsers = [
             { id: "GH10328", pass: "0000", role: "client" },
             { id: "GH98791", pass: "0000", role: "client" },
-            { id: "ADMIN",   pass: "8888", role: "admin" }
+            { id: "ADMIN",   pass: "8888", role: "admin" },
+            { id: "GH10051", pass: "0000", role: "client" }
         ];
 
         window.cart = [];
