--- a/index.html
+++ b/index.html
@@ -359,6 +359,8 @@
         const validUsers = [
             { id: "GH10328", pass: "0000", name: "Yebford Radiator" },
             { id: "GH98791", pass: "0000", name: "K.auto" },
+            { id: "GH10147", pass: "0000", name: "Qualiparts Ent" },
+            { id: "GH10307", pass: "0000", name: "Yeboah Radiator" },
             { id: "GH10051", pass: "0000", name: "David Gyamfi" }
         ];
 
