--- a/index.html
+++ b/index.html
@@ -361,6 +361,7 @@
             { id: "GH98791", pass: "0000", name: "K.auto" },
             { id: "GH10147", pass: "0000", name: "Qualiparts Ent" },
             { id: "GH10307", pass: "0000", name: "Yeboah Radiator" },
+            { id: "GH98873", pass: "0000", name: "Pole to Pole" },
             { id: "GH10051", pass: "0000", name: "David Gyamfi" }
         ];
 
